# dns-detector

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
example/: README  dns_servers.json  site_servers.json
src/: dns_client.rs  main.rs  models.rs
