[package]
name = "dns-detector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
hickory-resolver = { version = "0.24", features = ["tokio-runtime", "dns-over-https-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
futures = "0.3"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.2"
